    destination (specified with "--prefix" parameter given to configure
    script).
    
* Pending changes since 16.0.0
** API changes

   - New MP functions:
     mp:with-rwlock
     mp:try-get-semaphore (non-blocking)
     mp:mailbox-try-read  (non-blocking)
     mp:mailbox-try-send  (non-blocking)

   - Added back removed C interfaces
     ecl_improt_current_thread
     ecl_release_current_thread

** Enhancements:

   - Added code walker (present as *feature* :walker)

   - Testing framework cleanup

   - Format fallbacks to prin1 if infinity or NaN are passed to it

   - Annotations are added at runtime (better integration with SLIME)

** Issues fixed:

   - Building with single-threaded boehm works if ECL threads are disabled

   - Using labels works with sharp-S-reader

     (read-from-string
      "(#1=\"Hello\" #S(sharp-s-reader.1.example-struct :A #1#))")

   - Generated C code works well with IEEE 754 infinities
     (regression tests created)

   - EXT:EXTERNAL-PROCESS-WAIT potential race condition fix

* 16.0.0 changes since 15.3.7
** API changes

   - There is no UFFI nickname for FFI package - we piggyback on
     cffi-uffi-compat for UFFI dependent systems (our UFFI wasn't version
     2.0 compatible and there were problems with ADSF dependencies on
     UFFI - it wasn't a system)

   - CLOS has the new nickname "MOP"

   - The new ext:run-program :error argument can automatically create a
     separate stream if provided with the :stream keyword.
     The external-process structure also has a new field to hold that
     stream.

   - ext:run-program accepts new arguments - :if-input-does-not-exist,
     :if-error-exists and :external-format

   - ext:system no longer binds *standard-input* and *standard-output* and
     now ignores input and output (use ext:run-program for more control)

   - methods can be specialized on both single-float and double-float
     (built-in classes were added for them)
