@@ -37,7 +37,7 @@
      mp:mailbox-try-send  (non-blocking)
 
    - Added back removed C interfaces
-     ecl_improt_current_thread
+     ecl_import_current_thread
      ecl_release_current_thread
 
 ** Enhancements:
@@ -61,6 +61,14 @@
 
    - Generated C code works well with IEEE 754 infinities
      (regression tests created)
+
+   - User-defined heap sizes can now exceed the size of a fixnum on 32-bit
+
+   - The heap size limit was intended to be 1GB on 32-bit or 4GB on 64-bit
+     but inconsistency between ECL_FIXNUM_BITS and FIXNUM_BITS in the code
+     prevented the heap to grow for 64-bit.  This now occurs, and a few
+     other less visible bugs were fixed by restoring consistency to
+     ECL_FIXNUM_BITS.
 
    - EXT:EXTERNAL-PROCESS-WAIT potential race condition fix
 
